--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/JDBCtest
+spring.datasource.username=root
+spring.datasource.password=FuckTheSystem2189
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.thymeleaf.prefix=classpath:/templates/
+
+spring.mvc.hiddenmethod.filter.enabled = true
 
